# hippy-feat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.mindeye-variants  README.md  TASK_2_1_AMENDMENT_2026-04-28.md  TASK_2_1_FINDINGS.md  TASK_2_1_PREREGISTRATION.md  TASK_2_1_STATUS.md  TASK_6_PROPOSAL.md  pyproject.toml  smoke_test_nsd_tribe.py  smoke_test_realtime.py  smoke_test_rt_cloud.py  smoke_test_rt_tribe.py  smoke_test_tribe.py
containers/: Dockerfile.mindeye_pytorch  mindeye_pytorch.def
docs/: conf.py  glossary.md  princeton_pilot_recommendations.md  references.bib  requirements.txt  table1_reproducibility_recipe.md  task_2_1_for_rishab.md
jaxoccoli/: __init__.py  angiography.py  bayesian_beta.py  compcor.py  complex.py  complex_glm.py  connectivity.py  covariance.py  dot_adapter.py  fourier.py  fracridge.py  fusion.py  glm.py  glmdenoise.py  graph.py  hf_encoder.py  interpolate.py  io.py  learnable.py  losses.py  matrix.py  motion.py  motion_phase.py  multivariate.py  multiway_nordic.py  multiway_nordic_patch.py  nordic.py  nsd.py  permutation.py  phase_regression.py  realtime.py  rtcloud.py  signatures.py  spatial.py  stats.py  streaming_kalman.py  transport.py
presentation/: README.md  notebook_parity.md  rt_mindeye_pipeline.tex
scripts/: ar1_parity_test.py  bake_off_per_trial.py  bake_off_per_trial.sbatch  benchmark_glm_variants.py  benchmark_variants.py  build_acompcor.py  build_mindeye_sif.sbatch  clone_rtcloud_mindeye.sbatch  dimensionality_analysis.py  download_fmriprep_mindeye.sbatch  download_paper_checkpoint.sbatch  download_paper_checkpoint_sample10.sbatch  download_peng_2024.sbatch  download_rt3t_selective.sbatch  download_special515_stimuli.sbatch  fmriprep_sub005.sbatch  (+59 more)
(+219 files in other folders)
