[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxoccoli"
version = "0.3.0"
description = "GPU-accelerated fMRI preprocessing, Bayesian variance-aware GLM, and differentiable connectivity analysis in JAX. Drop-in for rt-cloud-based real-time neurofeedback."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Morgan G. Hough", email = "morgan@center17.org" },
]
keywords = ["fmri", "neuroimaging", "jax", "connectivity", "brain-decoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "optax>=0.1.3",
    "nibabel>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
neuro = [
    "nilearn>=0.10",
    "neuromaps>=0.0.5",
    "brainspace>=0.1.10",
    "brainsmash>=0.10.0",
    "templateflow>=0.8",
]
signatures = [
    "signax>=0.2.0",
]
bayesian = [
    "blackjax>=1.0",
]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-cov>=4.0",
    "scikit-learn",
]
doc = [
    "sphinx>=7.0",
    "furo>=2024.1.0",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-bibtex>=2.6",
    "sphinx-autodoc-typehints>=2.0",
]
all = [
    "jaxoccoli[neuro,signatures,bayesian,dev,doc]",
]

[project.urls]
Repository = "https://github.com/m9h/hippy-feat"

[tool.hatch.build.targets.wheel]
packages = ["jaxoccoli"]

[tool.pytest.ini_options]
testpaths = ["tests", "scripts/tests"]
